--- a/BudgetManager/popup.html
+++ b/BudgetManager/popup.html
@@ -2,6 +2,8 @@
 <html>
     <head>
         <title>Budget Manager</title>
+        <script src="jquery-3.1.0.min.js"></script>
+        <script src="popup.js"></script>
     </head>
     <body>
         <h1>Budget Manager</h1>
@@ -9,6 +11,6 @@
         <h2>Budget: <span id="budget">0</span></h2>
         <h3>Enter Amount</h3>
         <input id="amount" type="text">
-        <input id="addAmount" type="submit" value="Spend"/>
+        <input id="spendAmount" type="submit" value="Spend"/>
     </body>
 </html>
