Added options to the extension

--- a/BudgetManager/popup.html
+++ b/BudgetManager/popup.html
@@ -8,7 +8,7 @@
     <body>
         <h1>Budget Manager</h1>
         <h2>Total Spent: <span id="total">0</span></h2>
-        <h2>Budget: <span id="budget">0</span></h2>
+        <h2>Limit: <span id="limit">0</span></h2>
         <h3>Enter Amount</h3>
         <input id="amount" type="text">
         <input id="spendAmount" type="submit" value="Spend"/>
