--- a/BudgetManager/popup.html
+++ b/BudgetManager/popup.html
@@ -10,7 +10,11 @@
         <h2>Total Spent: <span id="total">0</span></h2>
         <h2>Limit: <span id="limit">0</span></h2>
         <h3>Enter Amount</h3>
+        
+        <h2>Is activated: <span id="is_running">false</span></h2>
         <input id="amount" type="text">
         <input id="spendAmount" type="submit" value="Spend"/>
+        <input id="start_timer" type="submit" value="start"/>
+        <input id="stop_timer" type="submit" value="stop"/>
     </body>
 </html>
