working website blocker and activation blocker

--- a/BudgetManager/options.html
+++ b/BudgetManager/options.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html>
     <head>
         <title>Budget Manager Options</title>
@@ -13,4 +13,4 @@
         <input id="resetTotal" type="submit" value="Reset Total" >
         
     </body>
-</html>
+</html> -->
