--- a/BudgetManager/popup.html
+++ b/BudgetManager/popup.html
@@ -1,20 +1,13 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Budget Manager</title>
-        <script src="jquery-3.1.0.min.js"></script>
-        <script src="popup.js"></script>
+        <title>Neuralics</title>
+        
     </head>
     <body>
-        <h1>Budget Manager</h1>
-        <h2>Total Spent: <span id="total">0</span></h2>
-        <h2>Limit: <span id="limit">0</span></h2>
-        <h3>Enter Amount</h3>
         
-        <h2>Is activated: <span id="is_running">false</span></h2>
-        <input id="amount" type="text">
-        <input id="spendAmount" type="submit" value="Spend"/>
-        <input id="start_timer" type="submit" value="start"/>
-        <input id="stop_timer" type="submit" value="stop"/>
+        <h2>Is activated: <span id="is_activated">false</span></h2>
+        <input class="start_timer" type="submit" value="start"/>
+        <script src="popup.js"></script>
     </body>
 </html>
