--- a/BudgetManager/popup.html
+++ b/BudgetManager/popup.html
@@ -1,13 +1,36 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>Neuralics</title>
-        
-    </head>
-    <body>
-        
-        <h2>Is activated: <span id="is_activated">false</span></h2>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet"
+          href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+          integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
+          crossorigin="anonymous">
+    <link rel="stylesheet"
+          href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"
+          integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr"
+          crossorigin="anonymous">
+    <link rel="stylesheet" href="styles.css">
+    <title>Focus Blocker</title>
+</head>
+<body>
+<div class="container">
+
+    <header class="text-center text-light my-4">
+        <h1 class="mb-1">Focus Blocker</h1>
+        <span class="mb-1">Block distracting websites for X minutes and improve your productivity!
+        </span>
+        <h2></h2>
+        <span class="mb-2">Is currently activated: <span id="is_activated">false</span></span>
+        <h3></h3>
         <input class="start_timer" type="submit" value="start"/>
-        <script src="popup.js"></script>
-    </body>
+    </header>
+</div>
+
+
+<script src="popup.js"></script>
+</body>
 </html>
